[package]
name = "daily-python"
version = "0.0.12"
edition = "2021"
license = "LicenseRef-Daily-co-Proprietary"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "daily"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.2", features = ["abi3-py39"] }
daily-core = { path = "../daily-core" }
futures = { version = "0.3.23", default_features = false, features = [
  "std",
  "executor",
] }
libc = "0.2.132"
serde = { version = "1.0.143", default_features = false, features = ["derive"] }
serde_json = "1.0.83"
tracing = "0.1.37"
webrtc-daily = { path = "../webrtc-daily" }
