[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "daily-python"
description = "Daily Client SDK for Python"
license = { text = "BSD 2-Clause License" }
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Communications :: Conferencing"
]

[project.urls]
Homepage = "https://daily.co"

[tool.maturin]
features = ["pyo3/extension-module"]
